[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simulstreaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa",
    "tiktoken",
    "torch",
    "torchaudio",
    "tqdm",
    "triton>=2.0.0,<3 ; (platform_machine == 'x86_64' and sys_platform == 'linux') or sys_platform == 'linux2'",
]

[tool.setuptools]
packages = [
    "translate",
    "simul_whisper",
    "whisper_streaming",
]
